<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>v2i_interface</name>
  <version>1.0.0</version>
  <description>V2I to Autoware interface package for converting SPaT messages to virtual traffic light states</description>
  <maintainer email="sws@example.com">SWS</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>its_ros_msgs</depend>
  <depend>tier4_v2x_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
